--- a/0.CareerCourse.md
+++ b/0.CareerCourse.md
@@ -316,6 +316,87 @@ Mental:
     Devise tactics and strategies
     Develop plans
 
+Evolution of war
+war is both timeless and everchanging 
+Changes may be gradual in some cases and drastic in others.  Drastic changes in war are typically the result of developments that dramatically upset the equilibrium of war such as the rifled bore, mass conscription, and the railroad.
+One major catalyst of change is the advancement of technology.  As the hardware of war improves through technological development, so must the tactical, operational, and strategic usage adapt to its improved capabilities both to maximize our own capabilities and to counteract our enemy's.
+
+the sscience and art of war 
+Science of War:
+-
+
+Methodical application of the empirical laws of nature  
+
+-
+
+Activities directly subject to the laws of ballistics, mechanics, and like disciplines
+
+-
+
+The application of fires, the effects of weapons, and the rates and methods of movement and resupply
+
+Art of War:  
+-
+
+Employment of creative or intuitive skills
+
+-
+
+The creative, situational application of scientific knowledge through judgment and experience
+
+-
+
+Creative ability to devise a practical solution
+
+-
+
+Involves conceiving strategies and tactics and developing plans of action to suit a given situation
+
+Dynamic of War:
+-
+
+War is a social phenomenon.   It is a competitive human interaction.
+
+-
+
+Human beings interact with each other in ways different from the way a scientist works with chemicals or formulas or the way an artist works with paints or musical notes.
+
+-
+
+Because of this dynamic of human interaction, fortitude, perseverance, boldness, esprit, and other traits not explainable by art or science are essential in war.
+
+Stability operations promote peace
+
+general war global confict between major powers
+
+
+levels of war 
+strategic
+highest level of war
+policy objectives
+Strategy derived from political and policy objectives must be clearly understood to be the sole authoritative basis for all operations.
+
+operational
+level links strategic and tactical levels 
+the use of tactical results to attain strategic objectives 
+Actions at this level imply a broader dimension of time and space than actions at the tactical level.  
+As strategy deals with winning wars and tactics with winning battles and engagements, the operational level of war is the art and science of winning campaigns.
+ Its means are tactical results, and its ends are the established strategic objectives.
+
+tactical
+lowest level of war tactics refer to teh concepts methods used to accomplish a particular mission in either combat or other military operations
+
+
+initiative is the ability to dictate terms of the conflict and force the enemy to meet on these terms
+
+respoonse
+Response is reaction to the initiative; it is how you respond to the opposition.  The responding, or second, party must have the desire and will to resist for conflict to take place.  
+
+Response is typically associated with defense.
+Defense aims to resist the enemy's will.  It also creates the opportunity for initiative.
+
+
+![6211_3_06_g1](https://github.com/solismark/COSC/assets/172278132/adf2e77a-6b4d-4db1-ad11-64c71a3db4f4)
 
 
 
