--- a/0.CareerCourse.md
+++ b/0.CareerCourse.md
@@ -399,7 +399,123 @@ Defense aims to resist the enemy's will.  It also creates the opportunity for in
 ![6211_3_06_g1](https://github.com/solismark/COSC/assets/172278132/adf2e77a-6b4d-4db1-ad11-64c71a3db4f4)
 
 
+combat power total destructive force to bring upon the enemy
+
+speed
+rapidity of action speed over time is temp and speed and tempo are weapons
+
+focus
+Focus is the convergence of combat power on the objective
+
+suprise
+Surprise creates disorientation from an unexpected act that degrades the enemy's will. Surprise is a weapon.  Surprise can lead to shock and allows small forces to defeat larger forces
+
+boldness
+Boldness is exploiting the disorderly nature of war unhesitatingly
+
+center of gravity and critical vulnerabilities
+center of gravity COG
+Centers of gravity are any important sources of strength
+
+critical vulnerabilities CV
+We want to attack the source of enemy strength, but we do not want to attack directly into that strength
+
+cog and cv together COG +CV 
+Center of gravity (COG) and critical vulnerability (CV) are complementary concepts. 
+A CV is a Pathway to atttacking a COG
+to target our actions in such a way as to have the greatest effect on the enem
 
 
+preparing for war 
+
+force planning
+major role in the maintenance and capability of the unit
+command is going to reply on you to maintain units required level of readiness
+
+organizing
+the operating forces are organized to provide an instant for in readiness with the ability to rapidly deploy forces capabale of conducting expiditionaly operations in any environment
+
+doctrine
+involves teaching the fundamental beliefs of the marine corps on the subject of war from its nature and theory to its preperations and conduct
+
+professionalism
+the marine corps demands that all leaders of marines are professionally competent
+
+
+
+irregular warfare 
+low intensity conflict
+Low-Intensity Conflict (LIC)
+Small Wars
+Military Operations Other than War (MOOTW)
+Limited Warfare
+Unconventional Warfare (UW)
+Asymmetric Warfare
+Unrestricted Warfare
+
+C2 command and control
+exercise of authority and direction by a properly designatred commander
+C2 is the key to achieving unity of effort and realizing the full combat potential of the unit.
+
+Basic elements of C2
+people 
+information
+c2 support structure
+
+
+Purpose:
+
+Statement of the purpose for conducting the operation.
+
+This should include the “In order to” portion of the mission statement i.e. the “why”.
+It is re-communicated to ensure subordinates comprehension.
+
+Method:
+
+Statement of the commander’s over-arching plan for exploitation of the enemy’s key weakness and mission success. The method should include:
+
+Enemy Key Strength. Our Warfighting doctrine is based in the concept of maneuver warfare, in which we avoid surfaces and mass our firepower at the enemy’s gaps.  To do this, leaders, after having completed their estimate of the situation, will determine what provides strength to the enemy.
+Enemy Key Weakness. The converse of the enemy’s key strength is where we seek to focus our force.  The key weakness is the gap that when struck renders the enemy’s key strength ineffective, without having to strike the key strength directly.
+Exploitation plan. Here the leader articulates how the enemy’s key weakness will be exploited by the unit’s scheme of maneuver.
+
+Endstate:
+
+Leaders describe their vision of the battlefield after the dust has settled.
+
+This endstate is relative to enemy units, friendly units, and terrain.
+Ensuring that the desired endstate is pushed to all subordinates provides for flexibility on the battlefield, for if all subordinates clearly understand the desired endstate, they are capable of independently driving that goal even if the original proposed plan goes awry.
+
+IM or information management
+
+Classes of information
+
+Raw data
+Lowest class of information
+Facts and individual pieces of information called building blocks of processed information
+
+processed data
+For example, film that has been developed into a photograph, or grid coordinates plotted on a ma
+
+knowledge
+It is the result of analyzing, integrating, and interpreting processed data
+
+understanding
+Here, situational awareness has been gained.
+This better prepares the commander for future events and allows for sound decision-making
+
+
+
+facilitate all the information throughout the hiearchy to acheive situational awareness
+A
+collaborative tools
+email
+niprnet
+siprnet
+shareddrives
+sharepoint
+public folders
+chat
+radio traffic
+vtc
 
 
