--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -784,4 +784,83 @@ Get-hotfix | sort -Descending Description | select -Property Description, Hotfix
 ```
 
 
+
+
 you can use the ().count to index the position of the list and grab the information out
+
+
+## Get-Member
+
+## Measure-Object 
+does count by default
+and you have to specify the value you want
+
+
+
+# Day 2
+
+## Practical Exercise: Custom Object
+
+
+Create a custom object that contains information about the host system using the following:
+
+    Win32_ComputerSystem
+
+    Win32_BIOS
+
+    Win32_OperatingSystem
+
+    Win32_LogicalDisk
+
+```
+$computer = New-Object -TypeName psobject    # Creates the Object
+
+$compinfo = (Get-WmiObject win32_computersystem).name       ## You are pulling the info located at the .name
+$osinfo = (Get-WmiObject win32_operatingsystem).caption     ## You are pulling the info located at the .caption
+$osveinfo = (Get-WmiObject win32_operatingsystem).version   ## You are pulling the info located at the .version
+$osbios = (Get-WmiObject win32_bios).manufacturer           ## You are pulling the info located at the .manufacturer
+$diskinfo = (Get-WmiObject win32_logicaldisk).path.path     ## You are pulling the info located at the .path.path
+
+
+$computer | Add-Member -MemberType NoteProperty -Name ComputerName -Value $compinfo    # Adding to the Object Properties
+$computer | Add-Member -MemberType NoteProperty -Name OperatingSystem -Value $osinfo   # Adding to the Object Properties
+$computer | Add-Member -MemberType NoteProperty -Name OSVersion -Value $osveinfo       # Adding to the Object Properties
+$computer | Add-Member -MemberType NoteProperty -Name BIOS -Value $osbios              # Adding to the Object Properties
+$computer | Add-Member -MemberType NoteProperty -Name Disk -Value $diskinfo            # Adding to the Object Properties
+
+
+Get-WMIobject Win32_Computersystem | Get-Member -MemberType Properties | Where-Object {$_.name -like '*name*'}
+			# Used to search through to locate desired property
+
+
+
+```
+
+## Creating Objects
+each property can be accessed using .notation
+
+```
+$computer = New-Object -TypeName psobject
+
+```
+
+will create a new object
+
+## Searching Properies for the object
+
+```
+Get-WMIobject Win32_Computersystem | Get-Member -MemberType Properties | Where-Object {$_.name -like '*name*'}
+```
+
+## Adding to Custom Objects
+
+```
+
+$computer | Add-Member -MemberType NoteProperty -Name ComputerName -Value $compinfo    # Adding to the Object Properties
+$computer | Add-Member -MemberType NoteProperty -Name OperatingSystem -Value $osinfo   # Adding to the Object Properties
+$computer | Add-Member -MemberType NoteProperty -Name OSVersion -Value $osveinfo       # Adding to the Object Properties
+$computer | Add-Member -MemberType NoteProperty -Name BIOS -Value $osbios              # Adding to the Object Properties
+$computer | Add-Member -MemberType NoteProperty -Name Disk -Value $diskinfo            # Adding to the Object Properties
+
+
+```
