--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -866,3 +866,183 @@ $computer | Add-Member -MemberType NoteProperty -Name Disk -Value $diskinfo     
 ```
 
 
+
+## Script Block (Invoking Commands)
+
+{ get-service | format-table name,status }
+
+```
+$myblock = { get-service | format-table name,status }
+
+Invoke-Command $myblock
+&myblock
+```
+
+
+```
+
+$a = 1
+$b = {1+1}
+
+$a + &$b
+3
+```
+ways to invoke your commands
+
+
+## Group-Object
+
+```
+Get-Process | Group-Object Name | Sort -Property count
+
+Get-Process | Group-Object {$_.Name}
+
+Get-Process | Group-Object {$_.Name.Substring(0,1).ToUpper()}
+
+```
+.name 
+
+.substring is grouping based on the 1st index letter 
+
+.ToUpper() is making everything caps
+
+
+```
+
+Get-Process | Group-Object {$_.Name.Substring(0,1).ToUpper()} | ForEach-Object {($_.Name + " ") * 7; "============="; $_.group}
+
+
+```
+Making headers and see groups
+
+
+## Sort-Object
+
+```
+Get-Process | Sort-Object sarttime | Select-Object -Last 10 | ft processname, starttime
+
+PS C:\windows\system32> Get-Process | Sort-Object sarttime | Select-Object -Last 10 | ft processname, starttime
+
+ProcessName           StartTime           
+-----------           ---------           
+smss                  6/10/2024 1:24:00 PM
+sihost                6/25/2024 8:53:20 AM
+ShellExperienceHost   6/25/2024 8:55:42 AM
+SgrmBroker            6/10/2024 1:27:35 PM
+services              6/10/2024 1:24:41 PM
+SecurityHealthSystray 6/25/2024 8:53:52 AM
+SecurityHealthService 6/10/2024 1:49:01 PM
+SearchIndexer         6/10/2024 1:27:42 PM
+SearchApp             6/25/2024 8:53:38 AM
+WUDFHost              6/25/2024 8:53:15 AM
+
+
+Select-Object -ExpandProperty name
+
+
+```
+
+
+## Where-Object
+
+```
+
+
+
+```
+
+
+## Comparison Operators
+
+https://cted.cybbh.io/tech-college/pns/public/pns/latest/guides/Day_2_WOBC_Student_Guide.html#_comparison_operators
+
+-eq, -ceq
+
+Equals
+
+-ne, -cne
+	
+Not Equal
+
+-gt, -cgt
+	
+Greater Than
+
+-lt, -clt
+
+Less Than
+
+-ge, -cgt
+	
+Greater Than or Equal To
+
+-le, -cle
+
+Less Than or Equal To
+
+Conditions
+
+```
+2 -eq 2
+True
+
+2 -eq 3
+False
+
+1..5 -eq 3
+3
+
+
+PS C:\windows\system32> "Abc" -ceq "abc"
+False
+
+PS C:\windows\system32> "Abc" -eq "abc"
+True
+
+1..5 -gt 3
+4
+5
+
+"Abc", "def", "ghi" -eq "abc"
+Abc
+```
+
+
+
+## Matching
+
+-like, -clike
+
+String matches wildcard pattern
+
+-notlike, -cnotlike
+	
+String does not match wildcard pattern
+
+-match, cmatch
+	
+String matches regex pattern
+
+-notmatch, -cnotmatch
+
+String does not match regex pattern
+
+
+## Like
+
+```
+"powershell" -like "*shell"
+True
+
+"powershell", "server" -like "*shell"
+powershell
+
+"powershell", "server" -like "*s*"
+powershell
+server
+
+"powershell", "server" -notlike "*shell"
+server
+
+
+```
