--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -1044,5 +1044,44 @@ server
 "powershell", "server" -notlike "*shell"
 server
 
+```
+
+## Matches
 
 ```
+
+$text = 'Here is the model number: MO5364'
+$pattern = 'MO(\d{3})'
+$text -match $pattern
+
+$Matches[0]
+
+
+```
+
+## Contains
+
+icontains insensitive 
+ccontains case sensitive
+contains contains
+
+```
+$beer = 'spotted cow', 'lefthand brewery', "kneedeep", "coors light"
+
+$beer = 'spotted cow', 'lefthand brewery', "kneedeep", "coors light"
+$beer -contains 'coors light'
+True
+
+$beer = 'spotted cow', 'lefthand brewery', "kneedeep", "coors light"
+$beer -contains 'coors'
+False
+
+$beer = 'spotted cow', 'lefthand brewery', "kneedeep", "coors light"
+$beer -ccontains 'coors light'    # ccontains Case sensitive
+True
+
+$beer = 'spotted cow', 'lefthand brewery', "kneedeep", "coors light"
+$beer -contains 'Coors light'     # ccontains Case sensitive
+False
+```
+
