--- a/0.CareerCourse.md
+++ b/0.CareerCourse.md
@@ -519,3 +519,42 @@ radio traffic
 vtc
 
 
+Four types of combat operation centers
+
+main
+is tactical headquarters where the command and staff perform their activities it is semi permanent and established short of th erange of the enemys weapon systems
+
+forward
+The forward COC is the echelon of the headquarters that is located well forward on the battlefield so the commander has a command post near subordinate commanders and can directly influence operation
+
+alternate
+The alternate COC is a redundant C2 capability for the unit.
+The alternate COC is any location designated by a commander to assume C2 functions in the event that the main COC becomes inoperative.
+The alternate COC may be partially or fully equipped and staffed or it may be the main COC of a subordinate unit.
+The alternate COC should have equivalent equipment and personnel as the main COC. 
+
+rear
+The rear COC is the rear echelon of a unit's headquarters and is primarily concerned with logistics and administrative functions that cannot or should not be conducted in the area of operation. 
+
+
+
+https://www.marinenet.usmc.mil/Repository/6220_scorm_05JUNE2020/images/6222_4_03_p1.png
+
+
+commonly used systems on a COC
+combat operations center
+
+Command and Control Personal Computer (C2PC)
+Command Post of the Future (CPOF)
+Force XXI Battle Command Bridge and Below (BFT)
+Advance Field Artillery Tactical Data System (AFATDS)
+Biometric Automated Toolset (BAT)
+Battle Command Sustainment Support System (BCS3)
+Common Logistics Command and Control System (CLC2S)
+Transportation Capacity Planning Tool (TCPT)
+
+C2PC is a software application that provides map overlays, friendly unit locations with status, and plans of intended movement and hostile unit locations. 
+
+ CPOF is a decision support system that provides situational awareness and collaborative tools to support: 
+
+ 
