--- a/0.CareerCourse.md
+++ b/0.CareerCourse.md
@@ -557,4 +557,139 @@ C2PC is a software application that provides map overlays, friendly unit locatio
 
  CPOF is a decision support system that provides situational awareness and collaborative tools to support: 
 
- 
+
+ tactical fundamentals
+ introduction to tactics 
+ doctrine
+ fundamental principle that guides the actions of military forces in support of national objectives
+
+ MCDP Warfighting
+ the nature of war is inherently violent and chaotic
+
+ MCDP 1-3 Tactics
+ Establishes the Marine Corps Philosophy for wagin and winning battles
+
+
+ Art of tactics
+  The Art of  Tactics
+
+•Defined as three interrelated aspects:
+
+-
+A creative and flexible array of means to accomplish assigned missions
+
+-
+
+Decision-making under conditions of uncertainty
+
+-
+	
+Understanding the human dimension
+
+•Involves the creation, positioning, and maneuver of combat power:
+
+-
+	
+Creativity is a developed capacity acquired through education, practice, and experience.
+ The Science of Tactics
+
+•This is defined as the understanding of those military aspects of tactics—capabilities, techniques, and procedures—that can be measured and codified.
+
+•Artistry and creativity in the application of this aspect of tactics are impossible
+
+
+forms of manuever
+frontal attack
+This maneuver is directed against the front of the enemy forces. 
+flanking attack
+This form of maneuver is directed at the flank of an enemy force. 
+envelopment
+An envelopment is an offensive maneuver used to secure objectives to the enemy's rear
+turning movement
+This is a variation of the envelopment used to secure objectives deep in the rear area of the enemy.  Normally, the main effort executes the turning movement as the supporting effort fixes the enemy in position. 
+infiltration
+This form of maneuver requires forces to move over, through, or around enemy positions without detection to assume a position of advantage over the enemy. 
+penetration
+This is a form of maneuver where an attacking force seeks to rupture enemy defenses.  A penetration concentrates overwhelmingly superior combat power on a narrow front and in depth. 
+
+
+warfighting skills
+marksmanship
+"Every Marine a rifleman." 
+weapons employement
+Machine guns provide a high volume of accurate fire in support of the infantry in both the offense and defense.
+land navigation
+his skill must be trained, practiced, and sustained at every level from schools to individuals units. 
+close air support
+CAS is air action by fixed-wing and rotary-wing aircraft against hostile targets that are in close proximity to friendly forces, and requires detailed integration of each air mission with the fire and movement of those forces. 
+
+TTPs
+Tactics 
+The employement of units in combat
+Techniques and 
+the general and detailed methods used by troops and commanders to perform assigned missions and functions
+Procedures
+standard and detailed courses of action that describe how to perform task
+
+principles of war
+
+MOOSEMUSS
+MASS
+
+OBJECTIVE
+
+OFFENSIVE
+
+SECURITY
+
+ECONOMY OF FORCE
+
+MANUEVER
+
+UNITY OF COMMAND
+
+SUPRISE 
+
+SIMPLICITY
+
+
+SCORE: 80%
+PASSED
+
+Question 1
+The art of tactics is defined as __________.
+Your answer: The general and detailed methods used by troops and commanders to perform assigned missions and functions, specifically the method of using equipment and personnel
+Correct answer: Three interrelated aspects: the creative and flexible array of means to accomplish assigned missions, decision-making under conditions of uncertainty when faced with an intelligent enemy, and understanding the human dimension
+
+Question 2
+Which form of maneuver (depicted in the graphic below) occurs when an attacking force seeks to rupture enemy defenses on a narrow front to disrupt the defensive system?
+Your answer (correct): Penetration
+
+Question 3
+Preparing clear, uncomplicated plans and clear, concise orders to ensure thorough understanding is defined as __________.
+Your answer (correct): Simplicity
+
+Question 4
+What is the purpose of tactics, techniques, and procedures (TTPs)?
+Your answer (correct): A set of tools for the tactician to use in developing the solution to a tactical problem
+
+Question 5
+Which of the following tactical tenets is described as the relative speed and rhythm of military operations over time with respects to the enemy?
+Your answer (correct): Tempo
+
+Troop Leading Steps
+
+BAMCIS
+
+Begin the Planning
+
+Arrange for Recon
+
+Make the Recon
+
+Complete the Plan
+
+Issue the Order
+
+Supervise
+
