--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -898,7 +898,7 @@ Get-Process | Group-Object Name | Sort -Property count
 Get-Process | Group-Object {$_.Name}
 
 Get-Process | Group-Object {$_.Name.Substring(0,1).ToUpper()}
-
+$
 ```
 .name 
 
@@ -1086,4 +1086,100 @@ False
 ```
 
 
+
+## If Elseif Else
+
+```
+if (condition){
+	code to be executed
+}
+elseif (condition){
+	code to be executed
+}
+elseif (condition){
+	code to be executed
+}
+elseif (condition){
+	code to be executed
+}
+else {
+}
+
+```
+
+```
+$x = 11
+if($x -gt 10){"$x is larger than 10"}
+
+
+
+```
+
+## ForEach-Object
+
+```
+$sum = 0
+1..5 | ForEach-Object {$sum += $_}
+
+$letterarray = 'a', 'b', 'c', 'd'
+foreach ($letter in $letterarray)
+{
+	write-host $letter
+}
+
+```
+
+
 ## Practical Exersice: Comparison and Condition
+
+```
+$line1 = "Do you have model number: MT5437 for john.doe@sharklasers.com?"
+$line2 = "What model number for john.doe@sharklasers.com?"
+$lines = @()
+$lines += $line1
+$lines += $line2
+foreach ($line in $line1 + $line2)
+if ($line -match 'MT5437'){Write-Host $line has the model number}
+elseif ($line -match 'MT5437'){Write-host $line doesnt have the model number}
+}
+```
+
+Another example with adding two strings to an array
+```
+
+$line1 = "Do you have model number: MT5437 for john.doe@sharklasers.com?"
+$line2 = "What model number for john.doe@sharklasers.com?"
+$lines = @()
+$lines += $line1
+$lines += $line2
+foreach ($a in $lines){
+if ($a -match "MT5437"){Write-Host ($a):has the model number.}
+else {Write-host ($a):doesnt have model number.}
+}
+
+Do you have model number: MT5437 for john.doe@sharklasers.com? :has the model number.
+What model number for john.doe@sharklasers.com? :doesnt have model number.
+```
+
+Answer:
+
+```
+$line1 = "Do you have model number: MT5437 for john.doe@sharklasers.com?"
+$line2 = "What model number for john.doe@sharklasers.com?"
+$pattern = '[A-Za-z]{2}\d{2,5}'
+$line1, $line2 | ForEach-Object {
+     if ($_ -match $pattern){
+        Write-Host $Matches[0]": $_";
+     }
+     else{
+        Write-Host "No matches found on: $_";
+     }
+}
+
+MT5437 : Do you have model number: MT5437 for john.doe@sharklasers.com?
+No matches found on: What model number for john.doe@sharklasers.com?
+```
+
+
+
+
