--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -1180,6 +1180,277 @@ MT5437 : Do you have model number: MT5437 for john.doe@sharklasers.com?
 No matches found on: What model number for john.doe@sharklasers.com?
 ```
 
+## foreaech 
+used to iterate over a collection of objects
+
+```
+$array = 1..5
+foreach ($item in $array){
+	Write-Host $item
+}
+```
+
+```
+PS C:\windows\system32> $array = 1..5
+$sum = 0
+foreach ($item in $array){
+	Write-Host $item
+    $sum += $item
+}
+1
+2
+3
+4
+5
+
+PS C:\windows\system32> $sum
+15
+
+```
+
+
+## while
+
+```
+while(condition) {
+	Code
+}
+```
+
+```
+
+while($true){
+	'This is true'
+}
+
+
+```
+
+
+```
+PS C:\windows\system32> $sum = 0
+while($sum -lt 15){
+	$sum
+	$sum += 1
+}
+
+0
+1
+2
+3
+4
+5
+6
+7
+8
+9
+10
+11
+12
+13
+14
+```
+
+```
+$beer = ''
+while($beer -ne 'coors') {
+	$beer = Read-Host -Prompt "What is the best beer?"
+}
+
+
+PS C:\windows\system32> $beer = ''
+while($beer -ne 'coors') {
+	$beer = Read-Host -Prompt "What is the best beer?"
+}
+What is the best beer?: Coors
+
+```
+
+
+## dowhile
+while the condition is true it will run
+no matter what will run atleast once
+
+ ProcessIDs to a text file called procs.txt
+```
+do {
+	code block
+}until(condition)
+
+```
+
+```
+$num = 0
+do {
+	$num
+	$num += 1
+}until($num -gt 3)
+
+```
+```
+PS C:\windows\system32> $num = 0
+do {
+	$num
+	$num += 1
+}until($num -gt 3)
+
+0
+1
+2
+3
+
+
+```
+
+## dountil
+do until the condition is true
+no matter what will run atleast once
+
+
+```
+do {
+	code block
+}while(condition)
+
+```
+
+```
+$num = 0
+do {
+	$num
+	$num += 1
+}while($num -lt 3)
+
+```
+
+```
+PS C:\windows\system32> $num = 0
+do {
+	$num
+	$num += 1
+}while($num -lt 3)
+
+0
+1
+2
+
+```
+
+```
+PS C:\windows\system32> $num = 100
+do {
+	$num
+	$num += 1
+}while($num -lt 3)
+
+100
+
+PS C:\windows\system32> $num
+101
 
 
 
+```
+
+## for loop
+
+```
+for (initialization; condition; increment)
+{
+	code block
+}
+```
+
+
+```
+PS C:\windows\system32> for ($num = 1; $num -le 3; $num ++)
+{
+    $num
+}
+1
+2
+3
+
+```
+
+## break continue
+
+## Set-Content 
+
+```
+Set-Content -Path .\example.txt -Value "Hello"
+
+
+```
+
+## Get-Content
+
+```
+Get-Content .\example.txt
+Hello
+
+```
+
+## Add-Content
+
+```
+Add-Content -Path .\example.txt -Value "Gatorade is better"
+
+```
+
+
+## Practical Exercise: Looping & Iteration
+Part 1 and 2
+```
+$proc = "notepad", "msedge", "mspaint"
+$proc | ForEach-Object {
+    Start-Process $_
+}
+
+$proc | ForEach-Object {
+   (Get-process $_).Id | Add-Content -Path .\ProcID.txt
+}
+
+$proc | ForEach-Object {
+    Stop-Process -Name $_
+}
+
+
+```
+
+
+Part 3
+
+```
+$proc = "notepad", "msedge", "mspaint"
+$proc | ForEach-Object {
+Start-Process $_
+}
+
+$file = "$PWD\proc.txt"
+foreach($procs in $proc){
+Get-Process | Where-Object {$_.Name -like $procs} | ForEach-Object{Add-Content $file $_.id}
+}
+
+Get-Content -Path $file | ForEach-Object{Stop-Process -id $_}
+
+
+```
+```
+$proc = "notepad", "msedge", "mspaint"
+$proc | ForEach-Object {
+    Start-Process $_
+}
+
+$file = "$PWD\proc.txt"
+foreach($procs in $proc){
+   Get-Process | Where-Object {$_.Name -like $procs} | ForEach-Object{Add-Content $file $_.id}
+}
+
+Get-Content -Path $file | ForEach-Object{Stop-Process -id $_}
+$proc = "notepad", "msedge", "mspaint"
+foreach($procs in $proc){
+    Get-Process | Where-Object {$_.Name -like $procs} | Format-Table -Property id,name,starttime,totalprocessortime
+}
+
+```
