--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -1454,3 +1454,58 @@ foreach($procs in $proc){
 }
 
 ```
+
+## Practical Exercise : Creating a Function
+
+Write a function that returns the Ordinal date of the current date.
+```
+function od{
+$date=(Get-Date).dayofyear
+$year=(Get-date).Year
+Write-Host $year"-"$date
+
+}
+
+PS C:\windows\system32> od
+2024-179
+```
+
+Create a function that takes a number(n) as an argument and returns the square(n^2) of the number.
+
+```
+function Get-SquareNum([int]$num){
+    $result = $num * $num
+    $result
+}
+
+
+PS C:\windows\system32> Get-SquareNum 4
+16
+
+PS C:\windows\system32> Get-SquareNum 5
+25
+
+PS C:\windows\system32> Get-SquareNum 9
+81
+```
+
+Create a function that takes three (3) arguments and returns the product of the arguments.
+
+```
+function Get-Product($val1, $val2, $val3){
+	return $val1 * $val2 * $val3
+}
+
+PS C:\windows\system32> Get-Product 1 1 1
+1
+
+PS C:\windows\system32> Get-Product 2 2 2
+8
+
+PS C:\windows\system32> Get-Product 4 4 4
+64
+
+```
+
+
+
