--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -1507,5 +1507,174 @@ PS C:\windows\system32> Get-Product 4 4 4
 
 ```
 
+## Practical Exercise : Function Parameters
+
+Create a function that takes two(2) integer values, $a and $b, that are the lengths of two(2) legs of a right triangle and returns the length of the hypotenuse.
+
+```
+function Triangle([int]$a, [int]$b){
+    $hyp = ($a * $a) + ($b + $b)
+    return $hyp
+
+
+}
+
+PS C:\windows\system32> Triangle 4 2
+20
+
+PS C:\windows\system32> Triangle 2 3
+10
+
+```
+
+
+```
+function hyp($a, $b){
+return [math]::sqrt($a * $a + $b * $b )
+
+
+}
+
+
+```
+
+Create a function that takes two(2) values, $a and $b, as two(2) angles in degrees of a triangle. Return the value of the missing angle
+
+```
+function Triangle([int]$a, [int]$b){
+    $angle = 180 - ($a+$b)
+    return $angle
+
+}
+
+
+PS C:\windows\system32> Triangle 1 3
+176
+
+PS C:\windows\system32> Triangle 2  5
+173
+
+PS C:\windows\system32> Triangle 120 50
+10
+
+
+```
+
+Create a function that takes the following as mandatory parameters:
+
+First Name
+
+Last Name
+
+Age
+
+Weight in pounds(lbs)
+
+and returns the information in a hash table using the keys: first, last, age, and weight with the weight value converted to kilograms(kg) rounded to the nearest whole number
+
+```
+function weight{
+    $name = Read-Host "Enter your first name  "
+    $last = Read-Host "Enter your last name  "
+    $age = Read-Host "Enter your age  "
+    $lbs = [int](Read-Host "Enter your weight in lbs  ")
+    $kgs = $lbs * 0.45359237
+    
+    $user = New-Object -TypeName psobject
+    $user | Add-Member -MemberType NoteProperty -Name First -Value $name
+    $user | Add-Member -MemberType NoteProperty -Name Last -Value $last
+    $user | Add-Member -MemberType NoteProperty -Name Age -Value $age
+    $user | Add-Member -MemberType NoteProperty -Name Weight -Value $kgs
+    
+    $user | Format-List
+
+
+
+}
+```
+
+
+## Element Provided on the PipeLine
+
+End and Begin are option but PROCESS is mandatory
+
+```
+function process-block{
+Begin {code}
+Process {code}
+End {code}
+}
+
+```
+
+Example
+
+```
+function Print-PSitem{
+Begin {}
+Process {foreach ($i in $_){
+	return $i}}
+End {}
+}
+
+PS C:\windows\system32> 1..5 | Print-PSitem
+1
+2
+3
+4
+5
+```
+
+Example 
+
+```
+
+function Print-Item {
+	foreach($i in $Input){
+	$i}
+}
+
+PS C:\windows\system32> 1..5 | Print-Item
+1
+2
+3
+4
+5
+
+```
+
+## add-nums
+
+```
+function add-nums {
+Begin {$sum = 0}    
+Process {$sum += $_}
+End {$sum}
+}
+
+PS C:\windows\system32> 1..5 | add-nums
+15
+
+```
+
+```
+$beer = "Coors", "Guiness", "Blue Moon", "Corona"
+function Get-Groceries {
+Begin {}    
+Process {Add-Content -Path .\example.txt -Value $_}
+End {}
+}
+
+$beer | Get-Groceries
+
+
+PS C:\windows\system32> Get-Content .\example.txt
+Hello
+Gatorade is better
+Coors
+Guiness
+Blue Moon
+Corona
+```
 
 
