--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -1455,6 +1455,8 @@ foreach($procs in $proc){
 
 ```
 
+# Day 3
+
 ## Practical Exercise : Creating a Function
 
 Write a function that returns the Ordinal date of the current date.
