--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -1680,3 +1680,132 @@ Corona
 ```
 
 
+## Practical Exercise: Advanced Functions
+Create an advanced function using Begin, Process, and End, that takes two(2) arguments. The first argument being an array of at least ten(10) integers and the second argument being a single integer. Search the array argument for every occurrence of the single integer argument then return the sum of all elements in the array excluding every occurrence of the single integer argument.
+
+```
+function some{
+
+Begin {
+$array = 1..10
+$num = 5
+$sum = 0
+}
+
+Process { foreach($a in $array){
+if ($a -match $num){
+	continue}
+else {
+$sum += $a
+}
+}
+}
+
+End{
+return $sum
+}
+}
+
+PS C:\windows\system32> some
+50
+
+PS C:\windows\system32> some
+50
+
+```
+
+Answer
+
+```
+function some([array]$array, [int]$num){
+
+Begin {
+$sum = 0
+}
+
+Process { foreach($a in $array){
+if ($a -eq $num){
+	continue}
+else {
+$sum += $a
+}
+}
+}
+
+End{
+return $sum
+}
+}
+
+PS C:\windows\system32> some @(1,2,3,4,5,6,7,8,9,10) 5
+50
+
+PS C:\windows\system32> some @(1,2,3,4,5,6,7,8,9,10,11) 5
+61
+
+
+```
+
+
+
+Create an advanced function using Begin, Process, End, that prompts the user to enter the names of three(3) U.S. States then returns the names of the states in the order of longest name to shortest name and the amount of characters in each name.
+
+```
+function Sort-StatesByLength {
+
+    Begin {
+        Write-Host "Please enter the names of three U.S. states:"
+        $states = @()
+    }
+
+    Process {
+        for ($i = 1; $i -le 3; $i++) {
+            $stateName = Read-Host "Enter state $i" 	E6 
+            $states += [PSCustomObject]@{
+                Name = $stateName
+                Length = $stateName.Length
+            }
+        }
+    }
+
+    End {
+        $sortedStates = $states | Sort-Object -Property Length -Descending
+        Write-Host "Sorted States:"
+        foreach ($state in $sortedStates) {
+            Write-Host "$($state.Name) - $($state.Length)"
+        }
+    }
+}
+```
+
+
+Answer 
+
+
+```
+function longest{
+Begin {
+    $count = 0
+    $states = @()
+
+}
+Process {
+    While($count -lt 3){
+        $usr = Read-Host "Enter a U.S. State "
+        $states += $usr
+        $count += 1
+    }
+}
+End { 
+    $sortedstates = $states | Sort-Object -Property Length -Descending
+    foreach($state in $sortedstates){
+    Write-Host $state":" $state.length
+    }
+
+}
+
+}
+
+
+
+```
