--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -1591,7 +1591,7 @@ function weight{
     $user | Format-List
 
 
-
+ 	E6 
 }
 ```
 
@@ -1805,6 +1805,29 @@ End {
 }
 
 }
+
+
+
+```
+
+
+
+
+
+## Sort-Object 
+
+Example
+```
+
+$states = "se", "lng", "cant"
+$sortedstates = $states | Sort-Object -Property Length -Descending
+
+PS C:\windows\system32> $sortedstates
+cant
+lng
+se
+
+
 
 
 
