--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -1832,3 +1832,137 @@ se
 
 
 ```
+
+
+## Split()
+
+```
+'8.8.8.8' -split '\.'
+'8.8.8.8'.Split(.)
+
+PS C:\windows\system32> '8.8.8.8' -split '\.'
+8
+8
+8
+8
+
+PS C:\windows\system32> '8.8.8.8'.Split('.')
+8
+8
+8
+8
+
+```
+
+## Join()
+
+```
+'hello', 'world' -join ' '
+'cat', 'dog' -join ''
+
+hello world
+catdog
+```
+
+## StartsWith() Endswith()
+
+```
+'Hello world'.StartsWith('Hello')
+'hello world'.EndsWith('world')
+
+PS C:\windows\system32> 'hello world'.StartsWith('Hello')
+'hello world'.EndsWith('world')
+False
+True
+
+PS C:\windows\system32> 'Hello world'.Startswith('Hello')
+'hello world'.EndsWith('world')
+True
+True
+
+```
+
+Get rid of case sensitivity
+```
+('Hello world'.toLower()).StartsWith('hello')
+
+PS C:\windows\system32> ('Hello world'.toLower()).StartsWith('hello')
+
+True
+
+
+```
+
+
+## -match
+
+```
+'powershell is awesome' -match  '\w+(\?|!)'
+
+PS C:\windows\system32> 'powershell is awesome' -match  '\w+(\?|!)'
+False
+
+PS C:\windows\system32> 'powershell is awesome!' -match  '\w+(\?|!)'
+True
+
+
+```
+
+## IP Regex
+
+
+```
+$ip = (ipconfig) -match "ipv4"
+$ip.gettype()
+[string]$ip -match "\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}"
+
+PS C:\windows\system32> $ip = (ipconfig) -match "ipv4"
+$ip.gettype()
+[string]$ip -match "\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}"
+
+
+IsPublic IsSerial Name                                     BaseType                               
+-------- -------- ----                                     --------                               
+True     True     Object[]                                 System.Array                           
+True
+
+
+
+PS C:\windows\system32> $matches
+
+Name                           Value                                                              
+----                           -----                                                              
+0                              192.168.65.10
+
+```
+
+## Practical Exersice: Regex
+
+Create a function that extracts your current IP, Subnet and Gateway and outputs them in the following format:
+
+
+```
+function GetInfo {
+    $pattern = ".*?(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3})"
+    $netinfo = ipconfig
+   
+    $IP = $netinfo -match "IPV4$pattern" | ForEach-Object{
+    if($_ -match $pattern) {$Matches[1]}
+    }
+    $SUBNET = $netinfo -match "Subnet$pattern" | ForEach-Object{
+    if($_ -match $pattern) {$Matches[1]}
+    }
+    $GATEWAY =$netinfo -match "Gateway$pattern" | ForEach-Object{
+    if($_ -match $pattern) {$Matches[1]}
+    }
+
+    "IP: {0}`nSubnet: {1}`nGateway: {2}" -f $IP, $SUBNET, $GATEWAY
+ 
+}
+
+
+```
+
+
+
+
