--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -1966,3 +1966,26 @@ function GetInfo {
 
 
 
+
+
+## Practical Exersice: Regex
+'''
+
+function URL{
+    $ips = @()
+    $file = Get-Content "$PWD.\dns.txt"
+    $pattern = 'www\.[a-zA-Z0-9\-\.]+\.(com|org|net)'
+    foreach($line in $file){
+        if($line -match $pattern){
+        
+            $ips += $Matches
+            
+
+        }
+
+    }
+    ($ips | Sort-Object | Group-Object).Count
+
+}
+
+'''
