--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -1993,6 +1993,8 @@ function URL{
 
 
 
+## More Practice
+
 
 <# 4 #>
 function q1($var2,$var3,$var4,$var5) {
@@ -2103,3 +2105,18 @@ function q10 () {
     Get-Date -Format ('yyyyMMdd@HH:mm:ss')
 
 }
+
+
+
+
+
+Grading :
+
+Grade in either powershell or command prompt
+
+```
+cd C:\Users\student\Desktop\Practice
+
+PS C:\Users\student\Desktop\Practice> .\psexam.exec 
+
+```
