--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -1969,7 +1969,7 @@ function GetInfo {
 
 
 ## Practical Exersice: Regex
-'''
+
 
 function URL{
     $ips = @()
@@ -2137,4 +2137,185 @@ cd C:\Users\student\Desktop\Practice
 
 PS C:\Users\student\Desktop\Practice> .\psexam.exec 
 
+```
+
+
+
+
+
+
+
+
+## Practical : Before Test
+
+
+<# 1 #>
+```
+function q1($var1,$var2,$var3,$var4) {
+    <# Return the product of the arguments #>
+    return $var1 * $var2 * $var3 * $var4
+
+
+
+}
+```
+```
+function q2($arr,$rows,$cols,$key) {
+    <# Search the 2 dimensional array for the first occurance of key at column index 0
+       and return the value at column index 9 of the same row.
+       Return -1 if the key is not found.
+    #> 
+    foreach($i in $arr){
+        if ($i[0] -eq $key){return $i[9]}
+    }
+    return -1
+}
+```
+```
+function q3 {
+    <# In a loop, prompt the user to enter positive integers one at time.
+       Stop when the user enters a -1. Return the maximum positive
+       value that was entered."
+	#>
+    Begin {
+    $num = -1
+    $pos = @()
+    $stop = 0
+    }
+
+    Process {
+    while($stop -eq 0){
+    $usr = [int](Read-Host "Enter a number ")
+    if($usr -eq $num){
+    $nums = $pos | Sort-Object -Descending
+    return $nums[0]
+    $stop += 1    
+    }
+    else{
+    $pos += $usr
+    continue
+    }
+    }  
+    }
+
+    End {}
+
+
+}
+```
+```
+function q4($filename,$whichline) {
+    <# Return the line of text from the file given by the `$filename
+	   argument that corresponds to the line number given by `$whichline.
+	   The first line in the file corresponds to line number 0."
+	#>
+
+
+    $text = Get-Content $filename
+    return $text[$whichline]
+}
+```
+```
+function q5($path) {
+    <# Return the child items from the given path sorted
+       ascending by their Name
+	#>
+    $child = Get-ChildItem $path | Sort-Object
+    Return $child
+
+
+}
+```
+```
+function q6 {
+    <# Return the sum of all elements provided on the pipeline
+	#>
+Begin {$sum = 0}
+Process {foreach ($i in [int]$_){
+
+$sum += $_
+
+}
+```
+```
+}
+End {
+return $sum}
+
+
+}
+```
+```
+function q7 {
+	<# Return only those commands whose noun is process #>
+    Return Get-Command -Noun 'process'
+
+}
+```
+```
+function q8($adjective) {
+    <# Return the string 'PowerShell is ' followed by the adjective given
+	   by the `$adjective argument
+	#>    
+
+    Return 'Powershell is ' + $adjective
+
+
+
+    
+}
+```
+```
+function q9($addr) {
+	<# Return `$true when the given argument is a valid IPv4 address,
+	   
+
+       otherwise return `$false. For the purpose of this function, regard
+	   addresses where all octets are in the range 0-255 inclusive to
+	   be valid.
+	#>
+    $pattern = '^((25[0-5]|(2[0-4]|1\d|[1-9]|)\d)\.?\b){4}$'
+    if($addr -match $pattern){
+        return $true
+    }
+    else{
+     return $false
+    }
+
+    <#
+    foreach ($oct in $octect){
+        if($oct -ge 0 -and $oct -le 255){
+            continue
+        }
+        else{
+            return $false
+        }
+    
+    return $true
+    }
+    #>
+
+
+
+
+}
+```
+```
+function q10 ($filepath,$lasthash) {
+    <# Return `$true if the contents of the file given in the
+       `$filepath argument have changed since `$lasthash was
+       computed. `$lasthash is the previously computed SHA256
+       hash (as a string) of the contents of the file. #>
+       $hash = Get-FileHash $filepath
+       if($hash -match $lasthash){
+            return $false
+       }
+       else{
+            return $true
+       }
+
+
+
+
+}
 ```
