--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -2233,16 +2233,19 @@ function q6 {
 Begin {$sum = 0}
 Process {foreach ($i in [int]$_){
 
-$sum += $_
+$sum += $i
 
 }
 }
-End {
-return $sum}
+End {return $sum}
 
 
 }
 ```
+(input | Measure-Object -Sum).sum
+
+
+
 ```
 function q7 {
 	<# Return only those commands whose noun is process #>
@@ -2263,6 +2266,10 @@ function q8($adjective) {
     
 }
 ```
+
+or 
+Return "Powershell is $adjective"
+
 ```
 function q9($addr) {
 	<# Return `$true when the given argument is a valid IPv4 address,
@@ -2298,12 +2305,15 @@ function q9($addr) {
 
 }
 ```
+
 ```
 function q10 ($filepath,$lasthash) {
     <# Return `$true if the contents of the file given in the
        `$filepath argument have changed since `$lasthash was
        computed. `$lasthash is the previously computed SHA256
        hash (as a string) of the contents of the file. #>
+
+
        $hash = Get-FileHash $filepath
        if($hash -match $lasthash){
             return $false
@@ -2311,9 +2321,19 @@ function q10 ($filepath,$lasthash) {
        else{
             return $true
        }
+}
+```
+
+
+```
+
+function q10 ($filepath,$lasthash) {
+$hash = Get-FileHash -Algorithm SHA256 $filepath
+return $hash.hash -ne $lasthash
 
 
 
 
 }
+
 ```
