--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -2337,3 +2337,155 @@ return $hash.hash -ne $lasthash
 }
 
 ```
+
+
+
+## Exam
+
+
+<# 4 #>
+
+```
+function q1($var2,$var3,$var4,$var5) {
+    <# The parameters listed are the values of all angles
+       in a polygon except one. Find and return the value
+       of the remaining angle. If an impossible angle 
+       is found, return -1. 
+       The formula to find the sum of all angles of a 
+       polygon is `(n-2) * 180`, where `n` is the total 
+       number of angles. An impossible angle is one that 
+       is zero degrees (or less) or 360 degree (or more). 
+       #>
+       $angles = $var2+$var3+$var4+$var5
+       $sum = (5 - 2) * 180
+       $remain = $sum - $angles
+       if ($remain -gt 0 -or $remain -lt 360){
+            $remain
+       } else{return $false}
+
+
+
+}
+```
+```
+function q2($arr,$key) {
+    <# Search the 2 dimensional array for the first occurance 
+      of key at column index 0 and return the value at column
+      index 2 of the same row. Return -1 if the key is not found.
+    #>
+    foreach($i in $arr){
+        if ($i[0] -eq $key){return $i[2]}
+    }
+    return -1
+}
+```
+```
+function q3 {
+    <# In a loop, prompt the user to enter a string until
+       the user enters an empty string (length of 0) to 
+       stop. Return the string with the maximum 
+       length that the user entered."
+	#>
+    $a = ""
+    do{
+        $in = Read-Host
+        if ($in.Length -gt $a.Length){$a = $in}
+        else{continue}
+    }
+    until($in.Length -eq 0)
+    $a
+
+
+}
+```
+```
+function q4($filename,$start) {
+    <# Return the line of text from the file given by the `$filename
+	   argument that begins with the text specified by `$start.
+	   If no line in the file begins with the `$start text, return 
+	   $null."
+	#>
+    $text = Get-Content $filename
+    foreach ($t in $text){
+    if ($t -like "*$start*"){
+    return $t
+    }
+
+    }
+
+    return $null
+}
+```
+```
+function q5($path) {
+    <# Return the services in Stopped status sorted
+       descending by their Name
+	#>
+    return Get-Service | Where-Object { $_.Status -eq "Stopped" } | Sort -Descending
+    
+
+
+}
+```
+```
+function q6($filename) {
+    <# Write each of the elements provided on the pipeline to the
+       file specified by the $filename argument on separate lines
+	#>
+    foreach ($i in $input) {
+    Add-Content -Path $filename -Value $i
+
+    }
+}
+```
+```
+function q7 {
+	<# Return the list of all startup apps that have an 
+       AppId 'not ending in }'.
+    #>
+
+    Get-StartApps | Where-Object {$_.AppID -notmatch '}$'}
+
+}
+```
+
+```
+function q8($arr) {
+    <# Combine the provided `$arr argument into a string separated 
+       by a '-' between each element and return 
+       this string #>
+       return $arr -join '-'
+
+}
+
+```
+```
+function q9($addr) {
+	<# Return `$true when the given argument is an IPv4 address
+	   within the class 'E' otherwise return `$false. 
+       For an IPv4 address to be within class 'E', it
+       must fall within the range '240.0.0.0' to
+       '254.255.255.255'. 
+	#>
+
+    $a = ($addr -split '-')
+    if ($a -match '(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])'){
+        return ($a[0] -ge 240 -and $a[0] -le 254)
+    }
+
+
+}
+```
+```
+function q10 () {
+    <# Return the current date/time as a string formatted in 
+       the following way:
+       YearMonthDay@Hour:Minute:Second
+       For example, If the current date/time is 5 minutes and 
+       2 seconds after 3 PM on February 8th, 2018, the return 
+       value should be:  20180208@15:05:02
+    #>
+    Get-Date -Format ('yyyyMMdd@HH:mm:ss')
+}
+
+```
