--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -2340,11 +2340,11 @@ return $hash.hash -ne $lasthash
 
 
 
-## Exam
+# Exam
 
 
 <# 4 #>
-
+## F1
 ```
 function q1($var2,$var3,$var4,$var5) {
     <# The parameters listed are the values of all angles
@@ -2367,6 +2367,7 @@ function q1($var2,$var3,$var4,$var5) {
 
 }
 ```
+## F2
 ```
 function q2($arr,$key) {
     <# Search the 2 dimensional array for the first occurance 
@@ -2379,6 +2380,7 @@ function q2($arr,$key) {
     return -1
 }
 ```
+## F3
 ```
 function q3 {
     <# In a loop, prompt the user to enter a string until
@@ -2398,6 +2400,7 @@ function q3 {
 
 }
 ```
+## F4
 ```
 function q4($filename,$start) {
     <# Return the line of text from the file given by the `$filename
@@ -2416,6 +2419,7 @@ function q4($filename,$start) {
     return $null
 }
 ```
+## F5
 ```
 function q5($path) {
     <# Return the services in Stopped status sorted
@@ -2427,6 +2431,7 @@ function q5($path) {
 
 }
 ```
+## F6
 ```
 function q6($filename) {
     <# Write each of the elements provided on the pipeline to the
@@ -2438,6 +2443,7 @@ function q6($filename) {
     }
 }
 ```
+## F7
 ```
 function q7 {
 	<# Return the list of all startup apps that have an 
@@ -2448,7 +2454,7 @@ function q7 {
 
 }
 ```
-
+## F8
 ```
 function q8($arr) {
     <# Combine the provided `$arr argument into a string separated 
@@ -2459,6 +2465,7 @@ function q8($arr) {
 }
 
 ```
+## F9
 ```
 function q9($addr) {
 	<# Return `$true when the given argument is an IPv4 address
@@ -2476,6 +2483,7 @@ function q9($addr) {
 
 }
 ```
+## F10
 ```
 function q10 () {
     <# Return the current date/time as a string formatted in 
