--- a/0.CareerCourse.md
+++ b/0.CareerCourse.md
@@ -1,3 +1,12 @@
+Links for NET
+Guide: https://net.cybbh.io/public/networking/latest
+CTFD: http://10.50.20.180:8000/
+Practice: http://networking-practice-ctfd.server.vta:8000/
+
+
+
+
+
 SMEAC 5 paragraph order
 Situation
 Mission
