--- a/1.Python.md
+++ b/1.Python.md
@@ -1,5 +1,6 @@
 
-Net Recon Methodology x-
+Net Recon Methodology
+
 • Host discovery
 • Ruby ping sweep (if ping available)
 • Nmap scan if no ping
@@ -13,17 +14,17 @@ Net Recon Methodology x-
 • if 21 FTP [IP ADDR] connects to ftp server : isve
 • get [file name]
 • If 22 or 23 CONNECT and PASSIVE RECON
+
 Scan Methodology
 nmap -Pn [IP Addr] -T4 -p 21-23,80
-: Specien based 23.ins/chues found
 • Well known port range
 • which tepdump wireshark map telnet get curl ping
 • • 0 - 1023 (Actually scan 1-1023)
 • Chunks of 2000 or first 10000 ports (65535)
 • Hail Mary - Scan all the ports (65535)
+
 Passive Recon Methodology
-Italicized/bolded words are commands
-: Permissions:
+Permissions:
 • sudo -l
 • Interfaces and subnets
 • ip a
@@ -34,7 +35,7 @@ Italicized/bolded words are commands
 • ip route
 • show ip route VYOS}
 • Files of interest
-o find / -iname flag* o find / -iname hint*
+find / -iname flag* o find / -iname hint*
 • Other listening ports
 • ss -ntip
 • Available Tools
